# PP-CTI

./: .gitignore  .gitlab-ci.yml  LICENSE  README.org  compose.yaml
anonymizer/: Dockerfile  compose.yaml  config.yaml  pyproject.toml
anonymizer/pipelines/: default.json
anonymizer/src/anonymizer/: __init__.py  config.py  server.py  util.py  validation.py
anonymizer/src/anonymizer/clients/: __init__.py  arxlet.py  auth.py  context.py  flaskdp.py  misp.py  mqtt.py  tmb.py  valkey.py
anonymizer/src/anonymizer/debug/: __init__.py
anonymizer/src/anonymizer/execution/: __init__.py  exceptions.py
anonymizer/src/anonymizer/execution/engine/: __init__.py
anonymizer/src/anonymizer/execution/jobs/: __init__.py  arxlet.py  context.py  flaskdp.py  local.py  misp.py  mqtt.py  policies.py  stix.py
anonymizer/src/anonymizer/execution/pipeline/: __init__.py  pipeline
anonymizer/src/anonymizer/execution/stages/: __init__.py
anonymizer/src/anonymizer/models/: arxlet.py  auth.py  base.py  data_model.py  flaskdp.py  misp.py  policies.py  tmb.py
anonymizer/src/anonymizer/tasks/: __init__.py  initialization.py
anonymizer/src/anonymizer/transformers/: __init__.py  misp.py
anonymizer/src/scripts/: main.py
anonymizer/test/: __init__.py  conftest.py  test_anonymizer.py
anonymizer/test/deployment/: test_anonymizer.py  test_authentication.py
anonymizer/test/execution/: test_audits.py  test_jobs.py  test_pipelines.py  test_stages.py
anonymizer/test/models/: __init__.py  test_arxlet.py  test_flaskdp.py  test_misp.py  test_policies.py
anonymizer/test/resources/: default_misp_request.json
anonymizer/test/resources/pipelines/: default_pipeline.json  generator_job_fail.json  generator_job_success.json  optional_generated_job_fail.json  optional_job.json  optional_stage.json  simple_pipeline_fail.json  simple_pipeline_success.json
anonymizer/test/transformers/: test_misp.py
arxlet/: Dockerfile  build.gradle.kts  compose.yaml  settings.gradle.kts
arxlet/api/: build.gradle.kts  openapi.yaml
arxlet/server/: Dockerfile  build.gradle.kts
arxlet/server/WebContent/WEB-INF/: web.xml
arxlet/server/src/main/java/arxlet/anonymizer/: Anonymizer.java  ArxletException.java  AttributeAnonymizer.java  ObjectAnonymizer.java
arxlet/server/src/main/java/arxlet/api/: AttributesApi.java  DebugApi.java  DocumentationApi.java  ObjectsApi.java  VersionApi.java
arxlet/server/src/main/java/arxlet/invoker/: RestApplication.java  RestResourceRoot.java
arxlet/server/src/main/java/arxlet/model/: AttributeDataInner.java  AttributeRequest.java  ExceptionResponse.java  KAnonMetadata.java  KMapMetadata.java  LDivMetadata.java  ObjectAnonymizedInner.java  ObjectDataInner.java  ObjectDataInnerHierarchiesInner.java  ObjectInner.java  ObjectRequest.java  PetsInner.java  PetsInnerMetadata.java  RCLDivMetadata.java  SensitiveAttributeMetadata.java  TCloMetadata.java  (+1 more)
arxlet/server/src/main/resources/: redoc-static.html
arxlet/server/src/test/java/arxlet/: ARXletTest.java
flaskdp/: Dockerfile  Pipfile  compose.yaml  entrypoint.sh
flaskdp/flaskdp/: __init__.py  dp.py  server.py
frontend/: Dockerfile  compose.yaml  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  App.test.js  index.css  index.js  reportWebVitals.js
frontend/src/components/: Hierarchy.js  JSONviewer.js  PrivacyPolicy.js  SendEvent.js
frontend/src/theme/: colors.js
(+1 files in other folders)
